--- a/src/tachyons-hovers.css
+++ b/src/tachyons-hovers.css
@@ -129,3 +129,10 @@
   transition: background-color .15s ease-in-out; 
 }
 
+/* SD: REMOVE BACKGROUND ON HOVER */
+
+.no-bg-hover:hover,
+.no-bg-hover:focus {
+  transition: background-color .25s ease-in-out; 
+  background-color: transparent;
+}
